Add symbol journal and cheatsheet tools

--- a/bo4_zombies_checklist/index.html
+++ b/bo4_zombies_checklist/index.html
@@ -31,6 +31,7 @@
 
   <main>
     <div id="currentMapTitle" class="map-name"></div>
+    <div id="mapTools" class="map-tools"></div>
     <div id="sectionsContainer" class="sections"></div>
     <div class="footer-note">
       Données stockées dans ton navigateur (localStorage). Pas de compte, pas de serveur.
